# Vosk-Rust

./: Cargo.toml  README.md
scripts/: prep_small_graph.sh
src/: kaldi_io.rs  lib.rs  mfcc.rs  nnet3.rs  probe.rs  transition_model.rs
tools/: nnet3_ref.py
