[package]
name = "vosk-rust"
version = "0.0.1"
edition = "2021"
description = "Pure-Rust reimplementation of Vosk/Kaldi nnet3 chain ASR (MFCC + acoustic forward + WFST decode); no libvosk/Kaldi/Python."
repository = "https://github.com/Reza2kn/Vosk-Rust"
keywords = ["asr", "speech", "vosk", "kaldi", "nnet3"]
license = "Apache-2.0"

[dependencies]
rustfst = "0.13"
matrixmultiply = "0.3"  # pure-Rust SIMD SGEMM for the nnet3 forward
rustfft = "6"           # pure-Rust FFT for the Kaldi MFCC front end
flate2 = "1"            # transparent gzip loading of the (large) HCLG graph

[profile.release]
opt-level = 3

[[bin]]
name = "probe-fst"
path = "src/probe.rs"
