[package]
name = "vosk-rust"
version = "0.0.1"
edition = "2021"
description = "Pure-Rust reimplementation of Vosk/Kaldi nnet3 chain ASR (MFCC + acoustic forward + WFST decode); no libvosk/Kaldi/Python."
repository = "https://github.com/Reza2kn/Vosk-Rust"
keywords = ["asr", "speech", "vosk", "kaldi", "nnet3"]
license = "Apache-2.0"

[dependencies]
rustfst = "0.13"
# macOS uses Apple Accelerate (AMX) for the matmuls; other targets (Android/Linux) fall back to
# threaded matrixmultiply — set MATMUL_NUM_THREADS=4 (P-cores) there.
matrixmultiply = { version = "0.3", features = ["threading"] }
rustfft = "6"           # pure-Rust FFT for the Kaldi MFCC front end
flate2 = "1"            # transparent gzip loading of the (large) HCLG graph

[profile.release]
opt-level = 3

[[bin]]
name = "probe-fst"
path = "src/probe.rs"
